--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,6 +62,7 @@
       <div class="aler aler-danger" *ngIf="error">
         <h1>An Error Occurred!</h1>
         <p>{{ error }}</p>
+        <button class="btn btn-danger" (click)="onHandleError()">Okay</button>
       </div>
     </div>
   </div>
